# slb-control-polar-encoder

./: CMakeLists.txt  README.md  README.zh-CN.md
docs/: control_info_encoder_design.md  control_info_encoder_test_report.md  table_c1_extraction_report.md
include/slb/: control_polar_encoder.hpp
src/: control_polar_encoder.cpp  polar_reliability_sequence.cpp
tests/: test_control_polar_encoder.cpp
tools/: extract_c1_reliability.py
